cloudFiles/chat-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  containers:
    - name: chat-service
      image: <your dockerhub username>/chat-service-image:latest
      ports:
        - containerPort: 5002
