cloudFiles/collab-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-service
spec:
  selector:
    matchLabels:
      app: collab-service
  template:
    metadata:
      labels:
        app: collab-service
    spec:
      containers:
        - name: collab-service
          image: <your dockerhub username>/collab-service-image:latest
          ports:
            - containerPort: 5001
