cloudFiles/history-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-service
spec:
  selector:
    matchLabels:
      app: history-service
  template:
    metadata:
      labels:
        app: history-service
    spec:
      containers:
        - name: history-service
          image: <your dockerhub username>/history-service-image:latest
          ports:
            - containerPort: 5003
