cloudFiles/chat-service-sservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: NodePort
