cloudFiles/collab-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: collab-redis
  name: collab-redis
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: collab-redis
status:
  loadBalancer: {}
