cloudFiles/collab-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-service
spec:
  selector:
    app: collab-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: NodePort
