cloudFiles/history-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: history-postgresql
  name: history-postgresql
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: history-postgresql
status:
  loadBalancer: {}
