cloudFiles/history-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-service
spec:
  selector:
    app: history-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: NodePort
