cloudFiles/matching-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-postgresql
spec:
  selector:
    app: matching-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
