cloudFiles/matching-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: matching-rabbitmq
  name: matching-rabbitmq
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
  selector:
    io.kompose.service: matching-rabbitmq
status:
  loadBalancer: {}
