cloudFiles/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
