cloudFiles/question-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-service
spec:
  selector:
    app: question-service
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
  type: NodePort
