cloudFiles/user-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-postgresql
spec:
  selector:
    app: user-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
