cloudFiles/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: <frontend-ip-address>
spec:
  rules:
    - http:
        paths:
          - path: /api/questions
            pathType: Prefix
            backend:
              service:
                name: question-service
                port:
                  number: 4567
          - path: /api/refresh
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - path: /api/history
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 5003
          - path: /api/chat/socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 5002
          - path: /api/match/socket.io
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 5000
          - path: /api/collab/socket.io
            pathType: Prefix
            backend:
              service:
                name: collab-service
                port:
                  number: 5001
